[workspace]
resolver = '2'

members = ["contracts/*", "wasm"]

[workspace.package]
version = "0.1.0"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/bitcoin-bridge-cw.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/bitcoin-bridge-cw.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }
cosmwasm-vm = { version = "=1.2" }
bitcoin-script = { git = "https://github.com/oraichain/rust-bitcoin-script.git" }
bitcoin = { version = "0.29.2" }
thiserror = "1.0.26"

cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-multi-test = "0.16.6"
cw-utils = "0.16.0"
# ed = { git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8" }
derive_more = "0.99.17"

sha2 = "0.10.6"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
