[workspace]
resolver = '2'

members = ["contracts/*", "wasm"]

[workspace.package]
authors = ["Oraichain Labs"]
documentation = "https://github.com/oraichain/bitcoin-bridge-cw.git"
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]
homepage = "https://orai.io"
license = "MIT"
repository = "https://github.com/oraichain/bitcoin-bridge-cw.git"
version = "0.1.0"

[workspace.dependencies]
bitcoin = {version = "0.29.2"}
bitcoin-script = {git = "https://github.com/oraichain/rust-bitcoin-script.git"}
cosmwasm-schema = {version = "1.5"}
cosmwasm-std = {version = "1.5"}
cosmwasm-storage = {version = "1.5"}
cosmwasm-vm = {version = "1.5"}
cw-storage-plus = {version = "1.0.1"}
cw2 = {version = "1.0.1"}
cw20 = {version = "1.0.1"}
cw20-base = {version = "1.0.1"}
derive_more = "0.99.17"
thiserror = "1.0.26"

sha2 = "0.10.6"

cosmwasm-testing-util = {git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "ed58567"}
cw-ics20-latest = {git = "https://github.com/oraichain/ibc-bridge-wasm.git", rev = "b9cbeaf"}
token-bindings = {git = "https://github.com/oraichain/token-bindings.git", rev = "7861576"}
tokenfactory = {git = "https://github.com/oraichain/token-bindings.git", rev = "7861576"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
rpath = false
