[package]
name = "checkpoint"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
bitcoin-script = "0.1.1"
derive_more = "0.99.17"
ed = { git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8" }
sha2 = "0.10.6"
