[package]
name = "cw-bitcoin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-utils = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
ed = { workspace = true }
derive_more = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
bitcoin-script = { workspace = true }
sha2 = { workspace = true }
tokenfactory = { git = "https://github.com/oraichain/token-bindings.git", rev = "e85d734" }
token-bindings = { git = "https://github.com/oraichain/token-bindings.git", rev = "e85d734" }

[dev-dependencies]
cw-multi-test = { workspace = true }
chrono = "0.4.19"
serial_test = "2.0.0"
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "aaa09cf" }
