[package]
name = "cw-bitcoin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
bitcoin-script = { workspace = true }
sha2 = { workspace = true }

arrayref = "0.3"
libsecp256k1-core = "0.3.0"


[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.19"
serial_test = "2.0.0"
cosmwasm-testing-util = { workspace = true }
token-bindings = { workspace = true }
