[package]
authors = {workspace = true}
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "cw-bitcoin"
repository = {workspace = true}
version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
arrayref = "0.3"
bitcoin = {workspace = true, features = ["serde"]}
bitcoin-script = {workspace = true}
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-ics20-latest = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
derive_more = {workspace = true}
libsecp256k1-core = "0.3.0"
sha2 = {workspace = true}
thiserror = {workspace = true}
token-bindings = {workspace = true}
tokenfactory = {workspace = true}

[dev-dependencies]
chrono = "0.4.19"
cosmwasm-testing-util = {workspace = true}
serial_test = "2.0.0"
