[package]
authors = {workspace = true}
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "lib-bitcoin"
repository = {workspace = true}
version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bitcoin = {workspace = true, features = ["serde"]}
bitcoin-script = {workspace = true}
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true, features = ["ibc3"]}
cw-storage-plus = {workspace = true}
cw-utils = {workspace = true}
cw2 = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
derive_more = {workspace = true}
sha2 = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
chrono = "0.4.19"
cosmwasm-testing-util = {git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "0c9c4d8"}
cw-multi-test = {workspace = true}
serial_test = "2.0.0"
