[package]
authors = {workspace = true}
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "cw-light-client-bitcoin"
repository = {workspace = true}
version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
default = ["mainnet"]
library = []
mainnet = []
test-tube = []

[dependencies]
bitcoin = {workspace = true, features = ["serde"]}
chrono = {workspace = true}
common-bitcoin = {workspace = true}
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
derive_more = {workspace = true}
light-client-bitcoin = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
bitcoincore-rpc-async = {workspace = true}
bitcoind = {workspace = true}
chrono = {workspace = true}
cosmwasm-testing-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serial_test = "3.1.1"
tokio = {workspace = true}
