[package]
authors = {workspace = true}
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "proxy-bitcoin"
repository = {workspace = true}
version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
default = []

[dependencies]
bitcoin = {workspace = true, features = ["serde"]}
common-bitcoin = {workspace = true}
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
derive_more = {workspace = true}
ibc-proto = {workspace = true}
libsecp256k1-core = "0.3.0"
prost = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
cosmwasm-testing-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
